--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,51 +1,33 @@
-name: Release
+name: goreleaser
 
 on:
   push:
+    tags:
+      - '*'
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
-  release:
+  goreleaser:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Go environment
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.23.4
-
-    - name: Read version
-      id: read_version
-      run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
-
-    - name: Run tests
-      run: go test ./...
-
-    - name: Install GoReleaser
-      run: |
-        curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash
-        mv ./goreleaser /usr/local/bin/
-
-    - name: Create Release
-      env:
-        REPOSITORY_TOKEN: ${{ secrets.REPOSITORY_TOKEN }}
-        VERSION: ${{ env.VERSION }}
-      run: |
-        goreleaser release --clean --rm-dist
-
-  release_upload:
-    runs-on: ubuntu-latest
-    needs: release
-
-    steps:
-    - name: Upload release assets
-      uses: actions/upload-release-asset@v2
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/
-        asset_name: "{{ github.ref }}"
-        asset_content_type: application/octet-stream
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v5
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: '~> v2'
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
