--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,15 +16,15 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@4.2.2
+        uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
       -
         name: Set up Go
-        uses: actions/setup-go@5.2.0
+        uses: actions/setup-go@v5.2.0
       -
         name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@6.1.0
+        uses: goreleaser/goreleaser-action@v6.1.0
         with:
           distribution: goreleaser
           version: '~> v2'
