--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@@4.2.2
+      - uses: actions/checkout@v4.2.2
       - name: Setup Go
-        uses: actions/setup-go@5.2.0
+        uses: actions/setup-go@v5.2.0
         with:
           go-version: '1.23.4'
       - name: Install dependencies
